# dynamic-reso-supressor

./: .gitignore  .gitmodules  CMakeLists.txt  DynamicEqualizer.jucer  README.md  drs  mingw-toolchain.cmake  wine-run.sh
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: DynamicEqualizer.cpp  DynamicEqualizer.h  OLA.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumComponent.cpp  SpectrumComponent.h  SpectrumPlotObject.cpp  SpectrumPlotObject.h  StyleSheet.h
scripts/: config.sh
